[gd_scene load_steps=3 format=1]

[ext_resource path="res://pause-ui.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/KenFuture64.fnt" type="BitmapFont" id=2]

[node name="gameover-ui" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="paused-label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 463.0
margin/top = 324.0
margin/right = -497.0
margin/bottom = 68.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "Game Paused"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="continue" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../main-menu")
focus_neighbour/bottom = NodePath("../restart")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 90.0
margin/right = -256.0
margin/bottom = -6.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="restart" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../continue")
focus_neighbour/bottom = NodePath("../main-menu")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = -60.0
margin/right = -256.0
margin/bottom = -156.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Try Again"
flat = false

[node name="main-menu" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus_neighbour/top = NodePath("../restart")
focus_neighbour/bottom = NodePath("../continue")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = -204.0
margin/right = -256.0
margin/bottom = -300.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]

[connection signal="pressed" from="main-menu" to="." method="_on_mainmenu_pressed"]


